--- a/docs/algolia-aerial/src/stylesheet/partials/_fonts.sass
+++ b/docs/algolia-aerial/src/stylesheet/partials/_fonts.sass
@@ -1,6 +1,9 @@
-@import url('https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800')
-@import url('https://fonts.googleapis.com/css?family=Montserrat:300,400,500,700,900')
+@mixin AerialFonts
+  @import url('https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800')
+  @import url('https://fonts.googleapis.com/css?family=Montserrat:300,400,500,700,900')
 
+@if $AERIAL_LOAD_FONTS == true
+  @include AerialFonts
 
 h1, h2, h3, h4
   font-family: $headings-font-family
