--- a/docs/source/index.html.haml
+++ b/docs/source/index.html.haml
@@ -63,7 +63,7 @@ layout: default
             .spacer64
             .spacer32.hidden-sm
             %p.text-lg.color-bunting.text-demi.no-margin
-              +350 Live
+              750+ other websites
               %span.visible-sm.cf
                 implementations
             .spacer64.visible-sm
