--- a/docs/source/documentation/4-docsearch-FAQ/1-customize-configuration-file.html.md.erb
+++ b/docs/source/documentation/4-docsearch-FAQ/1-customize-configuration-file.html.md.erb
@@ -14,6 +14,14 @@ A good practice would be to emphasize the meaningful underlying part of it
 thanks to a dedicated class, which you will want to add to the `text` selector
 in your configuration file.
 
+For example, in this code snippet, you can exclude the code except the parameter of the function:
+```
+<code>
+function(<toIndex>something useful to search for</toIndex>)
+...
+</code>
+```
+
 ### Table of contents
 
 The elements of the table of contents only *target* but do not provide actual content.
