--- a/docs/source/documentation/1-docsearch/3-recommendations.html.md.erb
+++ b/docs/source/documentation/1-docsearch/3-recommendations.html.md.erb
@@ -86,7 +86,7 @@ this precise page will be scraped, crawled and so forth.
 This **de facto discovery** is really practical but not exhaustive enough.
 If for any reason, a webpage could not be referenced from another covered one,
 the scope of the search will be imperfect.
-For those reasons we highly recommend that you use a **Sitemap** (#).
+For those reasons we highly recommend that you use a [**Sitemap**](#https://www.sitemaps.org/).
 This lists every page of your web site and will be used as the **main source of truth**
 and it will define the roadmap of our scraping.
 Beside this exhaustivity, using a sitemap introduces a significant performance improvement for our scraper.
