first draft regarding our open source project policy
fixing middleman build

adding style enhancing

fix

fix link

learning haml

enhance faq

enhance faq

disabling code

precise our philosophy

docs: fix typos

Update 2-not-an-open-source-project.html.md.erb

Update index.html.haml

Update index.html.haml

Update join-form.haml

Update 2-not-an-open-source-project.html.md.erb

Introducing the first feedback

integrate final feedback

--- a/docs/source/index.html.haml
+++ b/docs/source/index.html.haml
@@ -28,7 +28,7 @@ layout: default
     %h2.page-section-title.upper-case.text-demi Why DocSearch?
     .spacer32
     %p.color-east-bay.text-regular We're kind of scratching our own itch here. As developers, we spend a lot of time reading documentation, and it isn’t always easy to find the information we need.
-    %p.color-east-bay.text-regular No one's to blame, building a good search for a documentation is a complex challenge.  We just happen to have a lot of experience doing that, and we want to share it with the world.
+    %p.color-east-bay.text-regular No one's to blame, building a good search for a documentation is a complex challenge.  We just happen to have a lot of experience doing that, and we want to share it with the world. Helping open source projects is one way we can contribute to this fantastic philosophy.
   .spacer40
 
 #section_examples.page-section.fill-royal-blue
@@ -113,10 +113,10 @@ layout: default
             %h3
               %span.how-it-works-number.text-lg.color-royal-blue.text-lg.m-r-small 3
               %span.text-demi
-                You add the search autocomplete to your UI
+                You add the dedicated search autocomplete to your UI
             .spacer16
             %p.color-east-bay.text-regular
-              We’ll send you a few lines of code to integrate Algolia autocomplete and power your search.
+              We’ll send you a few lines of code to integrate the dedicated Algolia autocomplete and power your search.
             %p.color-east-bay.text-regular
               You will receive the same speed, relevance and best-in-class UX as our paying customers.
 
