--- a/docs/source/documentation/4-docsearch-FAQ/3-does-my-project-qualify.html.md.erb
+++ b/docs/source/documentation/4-docsearch-FAQ/3-does-my-project-qualify.html.md.erb
@@ -30,4 +30,4 @@ We are always happy to help product we love. How could you know if you qualify? 
 
 ## My project is already featured
 
-If your project is already featured or or uses a **supported** documentation-generator tool (e.g. [pkgdown](http://pkgdown.r-lib.org/index.html), [docusaurus](https://docusaurus.io/), [gitbook](https://www.gitbook.com/), [vuepress](https://vuepress.vuejs.org/) ... DocSearch is totally handled on our side and stays free and will continue this way. We do recommend you to use [the featured Search-UI](https://github.com/algolia/docsearch) or fork it on your own.
+If your project is already featured or or uses a **supported** documentation-generator tool (e.g. [pkgdown](http://pkgdown.r-lib.org/index.html), [docusaurus](https://docusaurus.io/), [gitbook](https://www.gitbook.com/), [vuepress](https://vuepress.vuejs.org/) .... DocSearch is totally hosted on our side and stays free and will continue this way. We do recommend you to use [the featured Search-UI](https://github.com/algolia/docsearch) or fork it on your own.
