Update the community website regarding our open source project policy (#358)
* first draft regarding our open source project policy

fixing middleman build

adding style enhancing

fix

fix link

learning haml

enhance faq

enhance faq

disabling code

precise our philosophy

docs: fix typos

Update 2-not-an-open-source-project.html.md.erb

Update index.html.haml

Update index.html.haml

Update join-form.haml

Update 2-not-an-open-source-project.html.md.erb

Introducing the first feedback

integrate final feedback

* first draft regarding our open source project policy

fixing middleman build

adding style enhancing

fix

fix link

learning haml

enhance faq

enhance faq

disabling code

precise our philosophy

docs: fix typos

Update 2-not-an-open-source-project.html.md.erb

Update index.html.haml

Update index.html.haml

Update join-form.haml

Update 2-not-an-open-source-project.html.md.erb

Introducing the first feedback

integrate final feedback

* new draft regarding our policy

* fixing style

* fix

* enhance form

* enhance form

* fixing title

* new deploy

* adding missing package

--- a/docs/source/partials/join-form.haml
+++ b/docs/source/partials/join-form.haml
@@ -7,15 +7,18 @@
     %span.input-group-addon
       %i.icon.icon-link.color-bunting
     %input.form-control{type: 'text', placeholder: 'https://website.com/doc', name: 'url'}
-  %p.text-sm.color-east-bay.m-t-small We’ll crawl the <u>documentation pages</u> of your website and index them on Algolia.
-  .spacer32
+  %p.text-sm.color-east-bay.m-t-small 
+    We’ll crawl the <u>documentation pages</u> of your website and index them on Algolia.
+    Refer to 
+    %a{href: "https://community.algolia.com/docsearch/documentation/docsearch-FAQ/customize-configuration-file/", class:"clickable"} the projects we support
+  .spacer16
   %label.color-bunting.text-normal{:for => "email"} Email
   .input-group
     %span.input-group-addon
       %i.icon.icon-email.color-bunting
     %input.form-control{type: 'email', placeholder: 'you@example.org', name: 'email'}
   %p.text-sm.color-east-bay.m-t-small We’ll email you the code you need to integrate the search into your documentation.
-  .spacer32
+  .spacer16
   %p.checkbox.text-center
     %label
       %input{type: 'checkbox', name: 'owner'}
