fixing blurry point

--- a/docs/source/documentation/2-docsearch-scraper/1-overview.html.md.erb
+++ b/docs/source/documentation/2-docsearch-scraper/1-overview.html.md.erb
@@ -2,22 +2,23 @@
 title: DocSearch on your own infrastructure
 ---
 
-In the regular use of DocSearch, you don't have to bother, we **handle the whole stack**.
+When we entirely host your DocSearch implementation, you don't have to bother, we **handle the whole stack**.
 
-In some specific use cases, you may want to look under the hood and DIY.
-This is welcome with DocSearch since every tool is open source.
-DocSearch is composed of 3 different projects:
-* [The front-end of DocSearch](https://github.com/algolia/docsearch)
+In some specific use cases and situations, you may need to look under the hood and DIY.
+This is welcome with DocSearch since every tool is open source. Feel free to PR your features!
+
+DocSearch is basically composed of 3 different projects:
+* [The search-UI of DocSearch](https://github.com/algolia/docsearch)
 * [The scraper](https://github.com/algolia/docsearch-scraper), which browses & indexes web pages
-* [The configuration repo](https://github.com/algolia/docsearch-configs) for the scraper.
+* [The configuration files repo](https://github.com/algolia/docsearch-configs) for the scraper.
 
 ## The DocSearch backend: [our scraper](https://github.com/algolia/docsearch-scraper):
 
 This project is a collection of submodules, each one in its own directory:
 * cli: A command line tool to manage DocSearch. Run `./docsearch` and follow the steps
-* deployer: Tool used by Algolia to deploy the configuration in our Apache Mesos infrastructure
-* doctor: A monitoring/repair tool to check if the indices built by the scraper are in good shape
-* playground: An HTML page to easily test DocSearch indices
+* deployer: Tool used by Algolia to deploy the configuration in our Apache Mesos infrastructure. You do not need this.
+* doctor: A monitoring tool to check if the indices built by the scraper are in good shape. We mostly know every issue with your website. You do not need this.
+* playground: An HTML page to easily test your DocSearch indices.
 * scraper: The core of the scraper. It reads the configuration file, fetches the web pages and indexes them in Algolia.
 
 ## Install
@@ -64,20 +65,35 @@ Options:
   --help    Display help message
 
 Available commands:
- bootstrap              Bootstrap a docsearch config
- run                    Run a config
- playground             Launch the playground
+  bootstrap            Bootstrap a DocSearch config
+  test                 Run tests
+  playground           Launch the playground
+  run                  Run a config
+  deploy               Deploy configs
+ batch # You do not need these commands
+  batch:sync_helpdesk  update conversation for the missing config (conversation ID)
+ connector # You do not need these commands
+  connector:reindex    Reindex a connector
+  connector:enable     Disable a connector
+  connector:disable    Disable a connector
+  connector:logs       Reindex a connector
+ deploy # You do not need these commands
+  deploy:scraper       Deploy docker scraper images
  docker
-  docker:build          Build the scraper images (dev, prod, test)
-  docker:run            Run a config using docker
- test                   Run tests
+  docker:build         Build scraper images (dev, prod, test)
+  docker:run           Run a config using docker
+ emails # You do not need these commands
+  emails:update        Add or update contact emails
+  emails:delete        Delete contact emails
+ generate # You do not need these commands
+  generate:email       Generate the email for a docsearch
 ```
 
 ## Use DocSearch
 
 ### Create a config
 
-To use DocSearch, the first thing you need is to create a crawler config. For more details about configs, check out [our configuration repo](https://github.com/algolia/docsearch-configs), you'll have a list of options you can use and a lot of live and working examples.
+To use DocSearch, the first thing you need is to create a configuration. For more details about configs, check out [our parameters descritption](https://community.algolia.com/docsearch/documentation/docsearch-scraper/config-options/), you'll have a list of options you can use and a lot of live and working examples.
 
 ### Crawl the website
 
@@ -101,7 +117,7 @@ You can open the included **Playground** to test your DocSearch index.
 $ ./docsearch playground
 ```
 
-Enter your credentials and the index name mentioned in the crawler config file, and try the search!
+Enter your credentials and the `index_name` mentioned in the config, then try the search!
 
 ### Integrate DocSearch to your website
 
@@ -112,9 +128,10 @@ To add the DocSearch dropdown menu to your website, add the following snippet to
 <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/docsearch.js@2/dist/cdn/docsearch.min.js"></script>
 <script>
   var search = docsearch({
+    appId: '<APP_ID>', // the application ID containing your DocSearch index. If we host it for you, please remove this line
     apiKey: '<API_KEY>', // use a SEARCH-ONLY api key here
     indexName: '<INDEX_NAME>',
-    inputSelector: '<YOUR_INPUT_DOM_SELECTOR>',
+    inputSelector: '<YOUR_INPUT_DOM_SELECTOR>', // CSS selector targeting the element to replace with the dropdown
     debug: false // set to `true` if you want to inspect the dropdown menu's CSS
   });
 </script>
@@ -134,41 +151,3 @@ If you are running the scraper on your own, you will need to tell the widget abo
 ```
 
 If Algolia is handling the crawling of your site, you do not need to specify `appId`.
-
-## Admin task
-
-If you are an Algolia employee and want to manage a DocSearch account,
-you'll need to add the following variables in your `.env` file:
-
-```
-WEBSITE_USERNAME=
-WEBSITE_PASSWORD=
-SLACK_HOOK=
-SCHEDULER_USERNAME=
-SCHEDULER_PASSWORD=
-DEPLOY_KEY=
-```
-
-The cli will then have more commands for you to run.
-
-For some actions like deploying you might need to use different credentials than the ones in the _.env_ file.
-To do this you need to override them when running the cli tool:
-
-```sh
-APPLICATION_ID=<your APPLICATION_ID> API_KEY=<your API_KEY> ./docsearch deploy:configs
-```
-
-## Run the tests
-
-### With docker:
-
-```sh
-$ ./docsearch test
-```
-
-### Without docker:
-
-```sh
-$ pip install pytest
-$ API_KEY='test' APPLICATION_ID='test' python -m pytest
-```
