docs: Fix a typo

--- a/docs/source/documentation/4-docsearch-FAQ/3-does-my-project-qualify.html.md.erb
+++ b/docs/source/documentation/4-docsearch-FAQ/3-does-my-project-qualify.html.md.erb
@@ -14,7 +14,7 @@ Please note that you can [always run DocSearch on your own infra](https://commun
 
 If you want us to host everything for you, there are some few requirements you still need to comply with:
 - Be **an owner** of the snippet. You will need to inject some JS snippets.
-- Your website must be **publicly available**. If your website is not, you will need to run our scrapper on a whitelisted server or implemnet your own authentification strategy (not supported so far).
+- Your website must be **publicly available**. If your website is not, you will need to run our scrapper on a whitelisted server or implement your own authentification strategy (not supported so far).
 - Your website is a **documentation**. We will reduce the scope of our scrap to helpful pages only. 
 - Your website is **production ready**. We will not accept lorem ipsum website.
 
