fixing recurrnet issue

--- a/docs/source/documentation/2-docsearch-scraper/2-config-options.html.md.erb
+++ b/docs/source/documentation/2-docsearch-scraper/2-config-options.html.md.erb
@@ -383,7 +383,7 @@ Default is `0`.
 ### `custom_settings` _Optional_
 
 This object is [any custom Algolia settings](https://www.algolia.com/doc/api-client/settings/#the-scope-of-settings-and-parameters) you would like to pass to the index
-settings. You will [look under the hood of algolia](https://www.algolia.com/doc/).
+settings. Please use the python syntax. You will [look under the hood of algolia](https://www.algolia.com/doc/).
 
 ### `nb_hits_max` _Optional_
 
