general github handle

--- a/docs/source/documentation/4-docsearch-FAQ/2-global-questions.html.md.erb
+++ b/docs/source/documentation/4-docsearch-FAQ/2-global-questions.html.md.erb
@@ -40,4 +40,4 @@ Once you are granted (see above), analytics will be available in the Algolia das
 
 ## I am not the owner, what can i do?
 
-You can definitely help improving the search experience of your favourite documentation website by opening issues on the repo. You can also reference the GitHub handle @s-pace if you want us to chime in / provide you a quick demo. You can advocate the owner of the repo by letting them request DocSearch. We would be happy to support you in such regards. Feel free to ping.
+You can definitely help improving the search experience of your favourite documentation website by opening issues on the repo. You can also reference the GitHub handle @algolia/docsearch if you want us to chime in / provide you a quick demo. You can advocate the owner of the repo by letting them request DocSearch. We would be happy to support you in such regards. Feel free to ping.
